2.6.2 (12.12.2019):

* Fix importing UTF-8 in DjVu text layer


2.6.1 (12.11.2019):

* Fix crash importing metadata


2.6.0 (10.11.2019):

* Fix crash closing multiple message dialog via x-icon
  Closes bugs #333 (Segmentation fault when closing Messages window) and #334
  (Closing Scan Document dialog using close button causes gscan2pdf to exit)
* + --import-all option
* + new rotate 180° icon. Closes feature request #107 (Replace 180 degree icon)
* import metadata when opening PDF or DjVu files.
  Closes feature request #89 (Load document metadata at during open)
* Increment/decrement date on save dialog with +/- keys.
* Fixed reload-recursion bug triggered by unusual environment (reprotest)
* Update to French translation (thanks to Ltrlg)
* Update to Ukrainian translation (thanks to Yuri Chornoivan)


2.5.7 (11.10.2019):

* Recognise "Document Table" as flatbed for imagescan backend.
* Use option name as label for those options with no title.
* Extended edit profile functionality in scan dialog to frontend options.
* Close device when switching frontends so as not to block SANE for the new
  frontend.
* Allow tool processes to immediately continue working on subsequent pages
  despite errors on previous ones.
* Fix infinite loop scanning reverse pages
* Update to German translation (thanks to Stephan Woidowski)
* Update to Italian translation (thanks to Albano Battistella)
* Update to Russion translation (thanks to Olesya Gerasimenko)
* Update to Ukrainian translation (thanks to Yuri Chornoivan)


2.5.6 (11.09.2019):

* Prevent Negate from changing the alpha channel. 
  Thanks to Chris Mayo for the patch. Closes merge request #25
* Avoid image corruption with colour images when applying WhiteThreshold
  after BlackThreshold.
  Thanks to Chris Mayo for the patch. Closes merge request #26
* Extended edit profile functionality in scan dialog to current scan options,
  when no profile selected. Closes bug #328 (Blue cast to all colour scans)