@@ -1,6 +1,7 @@
 2.6.2 (12.12.2019):
 
 * Fix importing UTF-8 in DjVu text layer
+* Fix crash importing metadata
 
 
 2.6.1 (12.11.2019):
